Fix for Landing page text on mobile size

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,6 +1,10 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.about_text  {
+  display: inline-block;  
+  max-width: 450px;
+}
 
 .grid-container {
   padding-top: 6em;
